traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: not found: value estDroiteMur
  return (estFaceMur && estDroiteMur && getDirection==Direction.East)
                        ^Snake:4: error: value East is not a member of object plm.universe.Direction
  return (estFaceMur && estDroiteMur && getDirection==Direction.East)
                                                                ^